# CKKS-FullRNS

./: CMakeLists.txt  Readme.md
data/: BSConstValue.h  BootstrapKeyGen_data.h  N64slots16isLTBootstrap1isSparse1lEnc16lDec2.h  N64slots2isLTBootstrap1isSparse1lEnc16lDec2.h  N64slots32isLTBootstrap0isSparse0lEnc19lDec2.h  N64slots32isLTBootstrap1isSparse0lEnc16lDec2.h  N64slots8isLTBootstrap1isSparse1lEnc16lDec2.h  testConstValue.h
run/: bootstrap.cpp  tests.cpp
src/: Ciphertext.cpp  Ciphertext.h  Common.cpp  Common.h  Context.cpp  Context.h  Numb.cpp  Scheme.cpp  Scheme.h  SchemeAlgo.cpp  SecretKey.cpp  SecretKey.h  StringUtils.cpp  StringUtils.h  TestScheme.cpp  TestScheme.h  ckksrns-fhe.cpp  ckksrns-fhe.h  ckksrns-leveledshe.cpp  ckksrns-leveledshe.h  ckksrns-utils.cpp  ckksrns-utils.h  constants.h  myAuxAndPrecom.cpp  myBootstrapExample.cpp  myBootstrapExample.h  myChebyshevFunc.cpp  myChebyshevFunc.h  myKeySwitch.cpp  myKeySwitch.h  myLT.cpp  myLT.h  myMult.cpp  myMult.h  myRotation.cpp  myRotation.h  myTestBootstrap.cpp  myTestBootstrap.h  myTestChebyshevFunc.cpp  myTestChebyshevFunc.h  (+5 more)
